fixed card overflow error

--- a/apps/flashcard/static/css/card.css
+++ b/apps/flashcard/static/css/card.css
@@ -1,10 +1,11 @@
 .card{
     display: flex;
     flex-direction: column;
-    /* max-height: 30vh; */
+    
 
     .card-content{
         min-height: 15em;
+        overflow-y: auto;
     }
 
 
